--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "format": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "encoding": "^0.1.13",
     "firebase": "^10.4.0",
     "formik": "^2.4.5",
+    "moment": "^2.29.4",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.4.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
