--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.7",
     "classnames": "^2.3.2",
     "encoding": "^0.1.13",
     "firebase": "^10.4.0",
