--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.4.5",
     "moment": "^2.29.4",
     "next": "13.5.4",
+    "next-nprogress-bar": "^2.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
