--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stripe/react-stripe-js": "^2.3.1",
     "@stripe/stripe-js": "^2.1.7",
     "classnames": "^2.3.2",
+    "currency-symbol-map": "^5.1.0",
     "encoding": "^0.1.13",
     "firebase": "^10.4.0",
     "formik": "^2.4.5",
