--- a/package.json
+++ b/package.json
@@ -10,25 +10,24 @@
     "format": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@stripe/react-stripe-js": "^2.3.1",
-    "@stripe/stripe-js": "^2.1.7",
+    "@nextui-org/react": "^2.1.13",
     "classnames": "^2.3.2",
     "currency-symbol-map": "^5.1.0",
     "encoding": "^0.1.13",
     "firebase": "^10.4.0",
     "formik": "^2.4.5",
+    "framer-motion": "^10.16.4",
     "moment": "^2.29.4",
     "next": "13.5.4",
     "next-nprogress-bar": "^2.1.2",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
-    "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
