--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "@react-stately/data": "^3.10.3",
     "classnames": "^2.3.2",
     "currency-symbol-map": "^5.1.0",
     "encoding": "^0.1.13",
