--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-hot-toast": "^2.4.1",
+    "rehype-stringify": "^10.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.0.0",
+    "unified": "^11.0.3",
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
