--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rehype-stringify": "^10.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.0.0",
+    "sharp": "^0.32.6",
     "unified": "^11.0.3",
     "yup": "^1.3.2"
   },
