--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
     "@react-stately/data": "^3.10.3",
+    "algoliasearch": "^4.20.0",
     "classnames": "^2.3.2",
     "currency-symbol-map": "^5.1.0",
     "encoding": "^0.1.13",
