--- a/package.json
+++ b/package.json
@@ -27,11 +27,8 @@
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-hot-toast": "^2.4.1",
-    "rehype-stringify": "^10.0.0",
-    "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.0.0",
+    "react-markdown": "^9.0.0",
     "sharp": "^0.32.6",
-    "unified": "^11.0.3",
     "yup": "^1.3.2"
   },
   "devDependencies": {
