--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-feather": "^2.0.10",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.0",
+    "rehype-highlight": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "sharp": "^0.32.6",
     "yup": "^1.3.2"
   },
