--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/react": "^2.1.13",
     "@react-stately/data": "^3.10.3",
     "@types/mdx": "^2.0.9",
+    "@vercel/analytics": "^1.1.1",
     "algoliasearch": "^4.20.0",
     "classnames": "^2.3.2",
     "currency-symbol-map": "^5.1.0",
