🔵 other: upgrade next to `v14`.

--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "moment": "^2.29.4",
-    "next": "13.5.4",
+    "next": "^14.0.1",
     "next-nprogress-bar": "^2.1.2",
     "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.0",
@@ -41,12 +41,12 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
     "@types/youtube": "^0.0.49",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "^14.0.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "postcss": "^8",
