--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-feather": "^2.0.10",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.0",
+    "react-mentions": "^4.4.10",
     "rehype-highlight": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.32.6",
@@ -31,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "@types/react-mentions": "^4.1.13",
     "@types/youtube": "^0.0.49",
     "autoprefixer": "^10",
     "encoding": "^0.1.13",
