--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-mentions": "^4.4.10",
     "rehype-highlight": "^7.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-mentions": "^1.1.0",
     "sharp": "^0.32.6",
     "yup": "^1.3.2"
   },
